--- a/index.html
+++ b/index.html
@@ -1,80 +1,182 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تطبيق الدردشة</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     .chat-message {
       max-width: 70%;
       word-wrap: break-word;
     }
+    .message-sent {
+      background-color: #3b82f6;
+      color: white;
+      margin-left: auto;
+      border-radius: 1rem 1rem 0 1rem;
+    }
+    .message-received {
+      background-color: #e5e7eb;
+      color: black;
+      margin-right: auto;
+      border-radius: 1rem 1rem 1rem 0;
+    }
+    .user-item:hover {
+      background-color: #f3f4f6;
+      cursor: pointer;
+    }
   </style>
 </head>
-<body class="bg-gray-100">
-  <div class="container mx-auto p-4">
+<body class="bg-gray-100 font-sans">
+  <div class="container mx-auto p-4 max-w-md">
     <!-- شاشة تسجيل الدخول -->
     <div id="auth-section" class="bg-white p-6 rounded-lg shadow-md">
-      <h1 class="text-2xl font-bold text-center mb-4">تسجيل الدخول</h1>
-      <input type="email" id="email" placeholder="البريد الإلكتروني" class="w-full p-2 mb-4 border rounded">
-      <input type="password" id="password" placeholder="كلمة السر" class="w-full p-2 mb-4 border rounded">
-      <button onclick="signIn()" class="w-full bg-blue-500 text-white p-2 rounded">تسجيل الدخول</button>
-      <button onclick="showSignUp()" class="w-full bg-gray-500 text-white p-2 rounded mt-2">إنشاء حساب</button>
+      <h1 class="text-2xl font-bold text-center mb-6 text-blue-600">تطبيق الدردشة</h1>
+      <div class="mb-4">
+        <label class="block text-gray-700 mb-2">البريد الإلكتروني:</label>
+        <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" 
+               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+      </div>
+      <div class="mb-6">
+        <label class="block text-gray-700 mb-2">كلمة السر:</label>
+        <input type="password" id="password" placeholder="أدخل كلمة السر" 
+               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+      </div>
+      <button onclick="signIn()" class="w-full bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition mb-3">
+        <i class="fas fa-sign-in-alt mr-2"></i>تسجيل الدخول
+      </button>
+      <button onclick="showSignUp()" class="w-full bg-gray-200 text-gray-800 p-3 rounded-lg hover:bg-gray-300 transition">
+        <i class="fas fa-user-plus mr-2"></i>إنشاء حساب جديد
+      </button>
+      <div id="auth-error" class="mt-4 text-red-500 text-center hidden"></div>
     </div>
 
     <!-- شاشة إنشاء حساب -->
     <div id="signup-section" class="bg-white p-6 rounded-lg shadow-md hidden">
-      <h1 class="text-2xl font-bold text-center mb-4">إنشاء حساب</h1>
-      <input type="text" id="username" placeholder="اسم المستخدم" class="w-full p-2 mb-4 border rounded">
-      <input type="email" id="signup-email" placeholder="البريد الإلكتروني" class="w-full p-2 mb-4 border rounded">
-      <input type="password" id="signup-password" placeholder="كلمة السر" class="w-full p-2 mb-4 border rounded">
-      <button onclick="signUp()" class="w-full bg-green-500 text-white p-2 rounded">إنشاء حساب</button>
-      <button onclick="showLogin()" class="w-full bg-gray-500 text-white p-2 rounded mt-2">العودة لتسجيل الدخول</button>
+      <h1 class="text-2xl font-bold text-center mb-6 text-blue-600">إنشاء حساب جديد</h1>
+      <div class="mb-4">
+        <label class="block text-gray-700 mb-2">اسم المستخدم:</label>
+        <input type="text" id="username" placeholder="أدخل اسم المستخدم" 
+               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+      </div>
+      <div class="mb-4">
+        <label class="block text-gray-700 mb-2">البريد الإلكتروني:</label>
+        <input type="email" id="signup-email" placeholder="أدخل بريدك الإلكتروني" 
+               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+      </div>
+      <div class="mb-6">
+        <label class="block text-gray-700 mb-2">كلمة السر:</label>
+        <input type="password" id="signup-password" placeholder="أدخل كلمة السر" 
+               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+      </div>
+      <button onclick="signUp()" class="w-full bg-green-600 text-white p-3 rounded-lg hover:bg-green-700 transition mb-3">
+        <i class="fas fa-check mr-2"></i>إنشاء حساب
+      </button>
+      <button onclick="showLogin()" class="w-full bg-gray-200 text-gray-800 p-3 rounded-lg hover:bg-gray-300 transition">
+        <i class="fas fa-arrow-left mr-2"></i>العودة لتسجيل الدخول
+      </button>
+      <div id="signup-error" class="mt-4 text-red-500 text-center hidden"></div>
     </div>
 
     <!-- شاشة الرئيسية -->
     <div id="home-section" class="hidden">
-      <h1 class="text-2xl font-bold text-center mb-4">مرحبًا، <span id="current-user"></span></h1>
-      <div class="flex justify-between mb-4">
-        <button onclick="showAddUser()" class="bg-blue-500 text-white p-2 rounded">إضافة مستخدم</button>
-        <button onclick="showProfile()" class="bg-gray-500 text-white p-2 rounded">معلومات شخصية</button>
-        <button onclick="signOut()" class="bg-red-500 text-white p-2 rounded">تسجيل الخروج</button>
+      <div class="flex justify-between items-center mb-6">
+        <h1 class="text-xl font-bold text-blue-600">
+          <i class="fas fa-comments mr-2"></i>المحادثات
+        </h1>
+        <div class="flex space-x-2">
+          <button onclick="showAddUser()" class="bg-blue-600 text-white p-2 rounded-full hover:bg-blue-700 transition">
+            <i class="fas fa-user-plus"></i>
+          </button>
+          <button onclick="showProfile()" class="bg-gray-600 text-white p-2 rounded-full hover:bg-gray-700 transition">
+            <i class="fas fa-user"></i>
+          </button>
+          <button onclick="signOut()" class="bg-red-600 text-white p-2 rounded-full hover:bg-red-700 transition">
+            <i class="fas fa-sign-out-alt"></i>
+          </button>
+        </div>
       </div>
 
       <!-- قائمة المستخدمين -->
       <div id="users-list" class="bg-white p-4 rounded-lg shadow-md mb-4">
-        <h2 class="text-xl font-bold mb-2">المستخدمون</h2>
-        <ul id="users"></ul>
+        <h2 class="text-lg font-semibold mb-3 text-gray-700">
+          <i class="fas fa-users mr-2"></i>المستخدمون المتاحون
+        </h2>
+        <ul id="users" class="space-y-2"></ul>
       </div>
 
       <!-- شاشة إضافة مستخدم -->
       <div id="add-user-section" class="bg-white p-4 rounded-lg shadow-md mb-4 hidden">
-        <h2 class="text-xl font-bold mb-2">إضافة مستخدم</h2>
-        <input type="text" id="add-username" placeholder="اسم المستخدم" class="w-full p-2 mb-4 border rounded">
-        <button onclick="addUser()" class="w-full bg-green-500 text-white p-2 rounded">إضافة</button>
-        <button onclick="hideAddUser()" class="w-full bg-gray-500 text-white p-2 rounded mt-2">إلغاء</button>
+        <h2 class="text-lg font-semibold mb-3 text-gray-700">
+          <i class="fas fa-user-plus mr-2"></i>إضافة مستخدم جديد
+        </h2>
+        <input type="text" id="add-username" placeholder="أدخل اسم المستخدم" 
+               class="w-full p-3 border border-gray-300 rounded-lg mb-3 focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <div class="flex space-x-2">
+          <button onclick="addUser()" class="flex-1 bg-green-600 text-white p-2 rounded-lg hover:bg-green-700 transition">
+            <i class="fas fa-check mr-1"></i>إضافة
+          </button>
+          <button onclick="hideAddUser()" class="flex-1 bg-gray-200 text-gray-800 p-2 rounded-lg hover:bg-gray-300 transition">
+            <i class="fas fa-times mr-1"></i>إلغاء
+          </button>
+        </div>
+        <div id="add-user-error" class="mt-3 text-red-500 text-center hidden"></div>
       </div>
 
       <!-- شاشة المحادثة -->
       <div id="chat-section" class="bg-white p-4 rounded-lg shadow-md hidden">
-        <h2 class="text-xl font-bold mb-2">المحادثة مع <span id="chat-with"></span></h2>
-        <div id="chat-messages" class="mb-4"></div>
-        <input type="text" id="chat-input" placeholder="اكتب رسالة..." class="w-full p-2 border rounded">
-        <button onclick="sendMessage()" class="w-full bg-blue-500 text-white p-2 rounded mt-2">إرسال</button>
-        <button onclick="hideChat()" class="w-full bg-gray-500 text-white p-2 rounded mt-2">إغلاق المحادثة</button>
+        <div class="flex justify-between items-center mb-4">
+          <h2 class="text-lg font-semibold">
+            <i class="fas fa-comment-dots mr-2"></i>
+            <span id="chat-with"></span>
+          </h2>
+          <button onclick="hideChat()" class="text-gray-500 hover:text-gray-700">
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+        <div id="chat-messages" class="space-y-2 mb-4" style="height: 300px; overflow-y: auto;"></div>
+        <div class="flex space-x-2">
+          <input type="text" id="chat-input" placeholder="اكتب رسالة..." 
+                 class="flex-1 p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <button onclick="sendMessage()" class="bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition">
+            <i class="fas fa-paper-plane"></i>
+          </button>
+        </div>
       </div>
 
       <!-- شاشة المعلومات الشخصية -->
       <div id="profile-section" class="bg-white p-4 rounded-lg shadow-md hidden">
-        <h2 class="text-xl font-bold mb-2">معلومات شخصية</h2>
-        <input type="text" id="profile-username" placeholder="اسم المستخدم" class="w-full p-2 mb-4 border rounded">
-        <input type="email" id="profile-email" placeholder="البريد الإلكتروني" class="w-full p-2 mb-4 border rounded">
-        <button onclick="updateProfile()" class="w-full bg-blue-500 text-white p-2 rounded">تحديث</button>
-        <button onclick="hideProfile()" class="w-full bg-gray-500 text-white p-2 rounded mt-2">إغلاق</button>
+        <h2 class="text-lg font-semibold mb-4 text-gray-700">
+          <i class="fas fa-user-cog mr-2"></i>معلوماتي الشخصية
+        </h2>
+        <div class="mb-4">
+          <label class="block text-gray-700 mb-2">اسم المستخدم:</label>
+          <input type="text" id="profile-username" 
+                 class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        </div>
+        <div class="mb-4">
+          <label class="block text-gray-700 mb-2">البريد الإلكتروني:</label>
+          <input type="email" id="profile-email" 
+                 class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        </div>
+        <div class="flex space-x-2">
+          <button onclick="updateProfile()" class="flex-1 bg-blue-600 text-white p-2 rounded-lg hover:bg-blue-700 transition">
+            <i class="fas fa-save mr-1"></i>حفظ التغييرات
+          </button>
+          <button onclick="hideProfile()" class="flex-1 bg-gray-200 text-gray-800 p-2 rounded-lg hover:bg-gray-300 transition">
+            <i class="fas fa-times mr-1"></i>إلغاء
+          </button>
+        </div>
+        <div id="profile-error" class="mt-3 text-red-500 text-center hidden"></div>
       </div>
     </div>
   </div>
+
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
