--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
-    .chat-message {
-      max-width: 70%;
-      word-wrap: break-word;
+    .chat-container {
+      height: 70vh;
+      overflow-y: auto;
     }
     .message-sent {
       background-color: #3b82f6;
       color: white;
-      margin-left: auto;
       border-radius: 1rem 1rem 0 1rem;
     }
     .message-received {
       background-color: #e5e7eb;
       color: black;
-      margin-right: auto;
       border-radius: 1rem 1rem 1rem 0;
     }
-    .user-item:hover {
-      background-color: #f3f4f6;
-      cursor: pointer;
+    .typing-indicator:after {
+      content: '...';
+      animation: typing 1s infinite;
+    }
+    @keyframes typing {
+      0% { content: '.'; }
+      33% { content: '..'; }
+      66% { content: '...'; }
     }
   </style>
 </head>
@@ -33,24 +36,24 @@
   <div class="container mx-auto p-4 max-w-md">
     <!-- شاشة تسجيل الدخول -->
     <div id="auth-section" class="bg-white p-6 rounded-lg shadow-md">
-      <h1 class="text-2xl font-bold text-center mb-6 text-blue-600">تطبيق الدردشة</h1>
+      <h1 class="text-2xl font-bold text-center mb-6 text-blue-600">
+        <i class="fas fa-comments mr-2"></i>تطبيق الدردشة
+      </h1>
       <div class="mb-4">
         <label class="block text-gray-700 mb-2">البريد الإلكتروني:</label>
-        <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" 
-               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <input type="email" id="email" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
       </div>
       <div class="mb-6">
         <label class="block text-gray-700 mb-2">كلمة السر:</label>
-        <input type="password" id="password" placeholder="أدخل كلمة السر" 
-               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <input type="password" id="password" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
       </div>
-      <button onclick="signIn()" class="w-full bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition mb-3">
+      <button onclick="signIn()" class="w-full bg-blue-600 text-white p-3 rounded-lg mb-3">
         <i class="fas fa-sign-in-alt mr-2"></i>تسجيل الدخول
       </button>
-      <button onclick="showSignUp()" class="w-full bg-gray-200 text-gray-800 p-3 rounded-lg hover:bg-gray-300 transition">
-        <i class="fas fa-user-plus mr-2"></i>إنشاء حساب جديد
+      <button onclick="showSignUp()" class="w-full bg-gray-200 text-gray-800 p-3 rounded-lg">
+        <i class="fas fa-user-plus mr-2"></i>إنشاء حساب
       </button>
-      <div id="auth-error" class="mt-4 text-red-500 text-center hidden"></div>
+      <div id="auth-error" class="mt-4 text-red-500 hidden"></div>
     </div>
 
     <!-- شاشة إنشاء حساب -->
@@ -58,125 +61,108 @@
       <h1 class="text-2xl font-bold text-center mb-6 text-blue-600">إنشاء حساب جديد</h1>
       <div class="mb-4">
         <label class="block text-gray-700 mb-2">اسم المستخدم:</label>
-        <input type="text" id="username" placeholder="أدخل اسم المستخدم" 
-               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <input type="text" id="username" class="w-full p-3 border rounded-lg">
       </div>
       <div class="mb-4">
         <label class="block text-gray-700 mb-2">البريد الإلكتروني:</label>
-        <input type="email" id="signup-email" placeholder="أدخل بريدك الإلكتروني" 
-               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <input type="email" id="signup-email" class="w-full p-3 border rounded-lg">
       </div>
       <div class="mb-6">
         <label class="block text-gray-700 mb-2">كلمة السر:</label>
-        <input type="password" id="signup-password" placeholder="أدخل كلمة السر" 
-               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <input type="password" id="signup-password" class="w-full p-3 border rounded-lg">
       </div>
-      <button onclick="signUp()" class="w-full bg-green-600 text-white p-3 rounded-lg hover:bg-green-700 transition mb-3">
-        <i class="fas fa-check mr-2"></i>إنشاء حساب
+      <button onclick="signUp()" class="w-full bg-green-600 text-white p-3 rounded-lg mb-3">
+        <i class="fas fa-check mr-2"></i>تسجيل
       </button>
-      <button onclick="showLogin()" class="w-full bg-gray-200 text-gray-800 p-3 rounded-lg hover:bg-gray-300 transition">
-        <i class="fas fa-arrow-left mr-2"></i>العودة لتسجيل الدخول
+      <button onclick="showLogin()" class="w-full bg-gray-200 text-gray-800 p-3 rounded-lg">
+        <i class="fas fa-arrow-left mr-2"></i>رجوع
       </button>
-      <div id="signup-error" class="mt-4 text-red-500 text-center hidden"></div>
+      <div id="signup-error" class="mt-4 text-red-500 hidden"></div>
     </div>
 
-    <!-- شاشة الرئيسية -->
+    <!-- الشاشة الرئيسية -->
     <div id="home-section" class="hidden">
-      <div class="flex justify-between items-center mb-6">
+      <!-- شريط الأدوات -->
+      <div class="flex justify-between items-center mb-4">
         <h1 class="text-xl font-bold text-blue-600">
-          <i class="fas fa-comments mr-2"></i>المحادثات
+          <i class="fas fa-comments mr-2"></i>مرحباً، <span id="current-username"></span>
         </h1>
         <div class="flex space-x-2">
-          <button onclick="showAddUser()" class="bg-blue-600 text-white p-2 rounded-full hover:bg-blue-700 transition">
-            <i class="fas fa-user-plus"></i>
+          <button onclick="showProfile()" class="p-2 text-gray-600 hover:text-blue-600">
+            <i class="fas fa-user-circle text-xl"></i>
           </button>
-          <button onclick="showProfile()" class="bg-gray-600 text-white p-2 rounded-full hover:bg-gray-700 transition">
-            <i class="fas fa-user"></i>
-          </button>
-          <button onclick="signOut()" class="bg-red-600 text-white p-2 rounded-full hover:bg-red-700 transition">
-            <i class="fas fa-sign-out-alt"></i>
+          <button onclick="signOut()" class="p-2 text-gray-600 hover:text-red-600">
+            <i class="fas fa-sign-out-alt text-xl"></i>
           </button>
         </div>
       </div>
 
-      <!-- قائمة المستخدمين -->
-      <div id="users-list" class="bg-white p-4 rounded-lg shadow-md mb-4">
-        <h2 class="text-lg font-semibold mb-3 text-gray-700">
-          <i class="fas fa-users mr-2"></i>المستخدمون المتاحون
-        </h2>
-        <ul id="users" class="space-y-2"></ul>
-      </div>
-
-      <!-- شاشة إضافة مستخدم -->
-      <div id="add-user-section" class="bg-white p-4 rounded-lg shadow-md mb-4 hidden">
-        <h2 class="text-lg font-semibold mb-3 text-gray-700">
-          <i class="fas fa-user-plus mr-2"></i>إضافة مستخدم جديد
-        </h2>
-        <input type="text" id="add-username" placeholder="أدخل اسم المستخدم" 
-               class="w-full p-3 border border-gray-300 rounded-lg mb-3 focus:outline-none focus:ring-2 focus:ring-blue-500">
-        <div class="flex space-x-2">
-          <button onclick="addUser()" class="flex-1 bg-green-600 text-white p-2 rounded-lg hover:bg-green-700 transition">
-            <i class="fas fa-check mr-1"></i>إضافة
-          </button>
-          <button onclick="hideAddUser()" class="flex-1 bg-gray-200 text-gray-800 p-2 rounded-lg hover:bg-gray-300 transition">
-            <i class="fas fa-times mr-1"></i>إلغاء
-          </button>
-        </div>
-        <div id="add-user-error" class="mt-3 text-red-500 text-center hidden"></div>
+      <!-- قائمة المحادثات -->
+      <div id="conversations-list" class="bg-white rounded-lg shadow mb-4">
+        <!-- سيتم ملؤها بالجافاسكربت -->
       </div>
 
       <!-- شاشة المحادثة -->
-      <div id="chat-section" class="bg-white p-4 rounded-lg shadow-md hidden">
-        <div class="flex justify-between items-center mb-4">
-          <h2 class="text-lg font-semibold">
-            <i class="fas fa-comment-dots mr-2"></i>
-            <span id="chat-with"></span>
-          </h2>
-          <button onclick="hideChat()" class="text-gray-500 hover:text-gray-700">
-            <i class="fas fa-times"></i>
-          </button>
-        </div>
-        <div id="chat-messages" class="space-y-2 mb-4" style="height: 300px; overflow-y: auto;"></div>
-        <div class="flex space-x-2">
-          <input type="text" id="chat-input" placeholder="اكتب رسالة..." 
-                 class="flex-1 p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-          <button onclick="sendMessage()" class="bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition">
-            <i class="fas fa-paper-plane"></i>
-          </button>
+      <div id="chat-section" class="hidden">
+        <div class="bg-white rounded-lg shadow">
+          <div class="p-3 border-b flex justify-between items-center">
+            <h2 class="font-bold"><i class="fas fa-user mr-2"></i><span id="chat-with-user"></span></h2>
+            <button onclick="hideChat()" class="text-gray-500 hover:text-red-500">
+              <i class="fas fa-times"></i>
+            </button>
+          </div>
+          <div id="chat-messages" class="chat-container p-4 space-y-2"></div>
+          <div class="p-3 border-t flex">
+            <input type="text" id="message-input" placeholder="اكتب رسالة..." 
+                  class="flex-1 p-2 border rounded-l-lg focus:outline-none">
+            <button onclick="sendMessage()" class="bg-blue-600 text-white px-4 rounded-r-lg">
+              <i class="fas fa-paper-plane"></i>
+            </button>
+          </div>
+          <div id="typing-indicator" class="px-4 pb-2 text-sm text-gray-500 hidden">
+            <span id="typing-user"></span> <span class="typing-indicator"></span>
+          </div>
         </div>
       </div>
 
-      <!-- شاشة المعلومات الشخصية -->
-      <div id="profile-section" class="bg-white p-4 rounded-lg shadow-md hidden">
-        <h2 class="text-lg font-semibold mb-4 text-gray-700">
-          <i class="fas fa-user-cog mr-2"></i>معلوماتي الشخصية
+      <!-- الملف الشخصي -->
+      <div id="profile-section" class="bg-white p-4 rounded-lg shadow hidden">
+        <h2 class="text-xl font-bold mb-4 text-center">
+          <i class="fas fa-user-cog mr-2"></i>الملف الشخصي
         </h2>
-        <div class="mb-4">
-          <label class="block text-gray-700 mb-2">اسم المستخدم:</label>
-          <input type="text" id="profile-username" 
-                 class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <div class="text-center mb-4">
+          <div class="w-20 h-20 bg-blue-100 rounded-full mx-auto flex items-center justify-center text-3xl mb-2">
+            <i class="fas fa-user text-blue-600"></i>
+          </div>
+          <h3 id="profile-username" class="font-bold"></h3>
+          <p id="profile-email" class="text-gray-500 text-sm"></p>
         </div>
         <div class="mb-4">
-          <label class="block text-gray-700 mb-2">البريد الإلكتروني:</label>
-          <input type="email" id="profile-email" 
-                 class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <label class="block text-gray-700 mb-1">الاسم الكامل:</label>
+          <input type="text" id="fullname" class="w-full p-2 border rounded">
+        </div>
+        <div class="mb-4">
+          <label class="block text-gray-700 mb-1">حالة الحساب:</label>
+          <input type="text" id="status" class="w-full p-2 border rounded" placeholder="أكتب حالتك...">
         </div>
         <div class="flex space-x-2">
-          <button onclick="updateProfile()" class="flex-1 bg-blue-600 text-white p-2 rounded-lg hover:bg-blue-700 transition">
-            <i class="fas fa-save mr-1"></i>حفظ التغييرات
+          <button onclick="updateProfile()" class="flex-1 bg-blue-600 text-white p-2 rounded">
+            <i class="fas fa-save mr-1"></i>حفظ
           </button>
-          <button onclick="hideProfile()" class="flex-1 bg-gray-200 text-gray-800 p-2 rounded-lg hover:bg-gray-300 transition">
+          <button onclick="hideProfile()" class="flex-1 bg-gray-200 p-2 rounded">
             <i class="fas fa-times mr-1"></i>إلغاء
           </button>
         </div>
-        <div id="profile-error" class="mt-3 text-red-500 text-center hidden"></div>
       </div>
     </div>
   </div>
 
+  <!-- تحميل Firebase -->
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js"></script>
+  
+  <!-- ملف التطبيق الرئيسي -->
   <script src="app.js"></script>
 </body>
 </html>
