--- a/index.html
+++ b/index.html
@@ -1,44 +1,35 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>تطبيق الدردشة</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تطبيق دردشة خيالي</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body class="bg-gray-100 font-sans">
-  <!-- واجهة المستخدم -->
-  <div class="container mx-auto p-4 max-w-md">
-    <!-- شاشة تسجيل الدخول -->
-    <div id="auth-section" class="bg-white p-6 rounded-lg shadow-md">
-      <h1 class="text-2xl font-bold text-center mb-6 text-blue-600">تطبيق الدردشة</h1>
-      <div class="mb-4">
-        <label class="block text-gray-700 mb-2">البريد الإلكتروني:</label>
-        <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" 
-               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-      </div>
-      <div class="mb-6">
-        <label class="block text-gray-700 mb-2">كلمة السر:</label>
-        <input type="password" id="password" placeholder="أدخل كلمة السر" 
-               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-      </div>
-      <button onclick="signIn()" class="w-full bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition mb-3">
-        <i class="fas fa-sign-in-alt mr-2"></i>تسجيل الدخول
-      </button>
-      <button onclick="showSignUp()" class="w-full bg-gray-200 text-gray-800 p-3 rounded-lg hover:bg-gray-300 transition">
-        <i class="fas fa-user-plus mr-2"></i>إنشاء حساب جديد
-      </button>
-      <div id="auth-error" class="mt-4 text-red-500 text-center hidden"></div>
+<body>
+    <div class="container">
+        <div id="auth" class="mb-5">
+            <h2>تسجيل الدخول</h2>
+            <input type="email" id="email" class="form-control" placeholder="البريد الإلكتروني" required>
+            <input type="password" id="password" class="form-control" placeholder="كلمة المرور" required>
+            <button id="loginBtn" class="btn btn-primary">تسجيل الدخول</button>
+            <button id="registerBtn" class="btn btn-secondary">إنشاء حساب</button>
+        </div>
+
+        <div id="chat" style="display:none;">
+            <h2>الدردشة</h2>
+            <div id="messages" class="border p-2 mb-3" style="height: 300px; overflow-y: scroll;"></div>
+            <input type="text" id="messageInput" class="form-control" placeholder="اكتب رسالة...">
+            <button id="sendMessageBtn" class="btn btn-success mt-2">إرسال</button>
+            <button id="addUserBtn" class="btn btn-info mt-2">إضافة مستخدم</button>
+        </div>
     </div>
-  </div>
 
-  <!-- تحميل Firebase أولاً -->
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js"></script>
-
-  <!-- ثم تحميل app.js -->
-  <script src="app.js" defer></script>
+    <script src="firebaseConfig.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
