--- a/index.html
+++ b/index.html
@@ -130,11 +130,26 @@
         </div>
     </div>
 
+    <!-- قسم اختيار الصورة المصغرة -->
+    <div class="image-preview-modal" id="imagePreviewModal" style="display: none;">
+        <div class="image-preview-content">
+            <h3>معاينة الصورة</h3>
+            <div class="preview-container">
+                <img id="imagePreview" src="" alt="معاينة الصورة">
+            </div>
+            <div class="preview-actions">
+                <button id="confirmImageBtn" class="confirm-btn">استخدام هذه الصورة</button>
+                <button id="cancelImageBtn" class="cancel-btn">إلغاء</button>
+            </div>
+        </div>
+    </div>
+
     <!-- مكتبات Firebase -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-storage-compat.js"></script>
+    
+    <!-- ملف جافاسكريبت الخاص بالتطبيق -->
     <script src="app.js"></script>
 </body>
 </html>
